--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css"/>
-  <!--datepicker-->
+
 
 
 
@@ -22,8 +22,10 @@
       <h2><a href="index.html">HARUKA</a></h2>
       <nav>
         <li><a href="index.html">Home</a></li>
+        <li><a href="service.html">Service</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="book.html">Booking</a></li>
+        <li><a href="contact.html">Contact</a></li>
         <li><a href="lists.html">Admin</a></li>
       </nav>
     </header>
@@ -50,36 +52,7 @@
       </ul>		
     </section>
 
-    <section class="services-area" id="services">
-      <h3 class="section-title">Services</h3>
-      <ul class="services-content">
-        <li>
-          <i class="fa fa-bed"></i>
-          <h4>HomeStay</h4>
-          <p>Provide comportable bed place and a very luxury room for resting</p>
-        </li>
-        <li>
-          <i class="fa fa-cutlery"></i>
-          <h4>Food</h4>
-          <p>Provide food delivery to your doorstep with variety of menu to choose</p>
-        </li>
-        <li>
-          <i class="fa fa-wifi"></i>
-          <h4>Wifi</h4>
-          <p>Provide faster and unlimited wifi for family to browse internet</p>
-        </li>
-      </ul>
-    </section>
       
-
-
-
-
-<footer>
-
-  <p>This website still in progress. Thank you for visit the website</p>
-
-</footer>
 
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
